Perbaikan file dan html serta di subsPage.js

--- a/html/aboutUsPage.html
+++ b/html/aboutUsPage.html
@@ -16,13 +16,13 @@
    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
    <script src="https://kit.fontawesome.com/3515e30614.js" crossorigin="anonymous"></script>
    
-    <link rel="stylesheet" href="aboutUsPage.css">
+    <link rel="stylesheet" href="/css/aboutUsPage.css">
     <title>About Us | M&T</title>
     <link rel="shortcut icon" href="assets/MTLogo.png">
 </head>
 <body>
     <section class="header">
-        <a href="homePage.html"><img src="assets/mtLogo.png" class="logo" alt=""></a>
+        <a href="homePage.html"><img src="/assets/mtLogo.png" class="logo" alt=""></a>
         <div>
             <ul class="nav" id="nav_bar">
                 <li><a href="homePage.html">Home</a></li>
@@ -56,12 +56,12 @@
                             </p>
                         </div>
                         <div class="imgAbt">
-                            <img src="assets/aboutImg1.jpeg" alt="Jakarta">
+                            <img src="/assets/aboutImg1.jpeg" alt="Jakarta">
                         </div>
                     </div>
                     <div class="rowAbt">
                         <div class="imgAbt">
-                            <img src="assets/aboutImg2.jpg" alt="Bandung">
+                            <img src="/assets/aboutImg2.jpg" alt="Bandung">
                         </div>
                         <div class="descAbt">
                             <h3>History</h3>
@@ -121,9 +121,9 @@
                 <div class="follow">
                     <h4>Follow Us</h4>
                     <div class="icon">
-                        <a href="https://www.instagram.com/" target="_blank"><img src="assets/instagram.png" alt="instagram"></a>
-                        <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt="faceboook"></a>
-                        <a href="https://twitter.com/?lang=en" target="_blank"><img src="assets/twitter.png" alt="twitter"></a>
+                        <a href="https://www.instagram.com/" target="_blank"><img src="/assets/instagram.png" alt="instagram"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img src="/assets/facebook.png" alt="faceboook"></a>
+                        <a href="https://twitter.com/?lang=en" target="_blank"><img src="/assets/twitter.png" alt="twitter"></a>
                     </div>
                 </div>
             </div>
@@ -154,5 +154,5 @@
         </div>
     </footer>
 </body>
-<script src="nav.js"></script>
+<script src="/js/nav.js"></script>
 </html>
