--- a/html/clothesTop.html
+++ b/html/clothesTop.html
@@ -12,15 +12,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3515e30614.js" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="clothesList.css">
-    <title>Bottoms | M&T</title>
+   
+    <link rel="stylesheet" href="/css/clothesList.css">
+    <title>Tops | M&T</title>
     <link rel="shortcut icon" href="assets/MTLogo.png">
 
 </head>
 <body>
     <section class="header">
-        <a href="homePage.html"><img src="assets/mtLogo.png" class="logo" alt=""></a>
+        <a href="homePage.html"><img src="/assets/mtLogo.png" class="logo" alt=""></a>
         <div>
             <ul class="nav" id="nav_bar">
                 <li><a href="homePage.html">Home</a></li>
@@ -38,108 +38,108 @@
 
     <!-- content -->
     <section class="content">
-        <h1>Bottoms</h1>
+        <h1>Tops</h1>
         <div class="card">
             <div class="rowCard">
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/bot_1_b.jpg" alt="models">
-                        <img class="top-img" src="assets/bot_1.jpg" alt="bottoms">
-                    </div>  
-                    <h2>Regular Fit Joggers</h2>
+                        <img src="/assets/blackSweateshirt.jpg" alt="models">
+                        <img class="top-img" src="/assets/blackSweatshirtP.jpg" alt="tops">
+                    </div>
+                    <h2>Sweatshirt Whiteturtle</h2>
                     <p>Rp.300.000,00</p>
                 </div>
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/bot_2_b.jpg" alt="models">
-                        <img class="top-img" src="assets/2_bot.jpg" alt="bottoms">
+                        <img src="/assets/blackShirt.jpg" alt="models">
+                        <img class="top-img" src="/assets/blackShirtP.jpg" alt="tops">
                     </div>
-                    <h2>Regular Fit Chinos</h2>
-                    <p>Rp.450.000,00</p>
+                    <h2>Slimfit Blackshirt</h2>
+                    <p>Rp.200.000,00</p>
                 </div>
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/3_bot_b.jpg" alt="models">
-                        <img class="top-img" src="assets/3_bot.jpg" alt="bottoms">
+                        <img src="/assets/blueSuit.jpg" alt="models">
+                        <img class="top-img" src="/assets/blueSuitP.jpg" alt="tops">
                     </div>
-                    <h2>Regular Fit Suit Trousers</h2>
-                    <p>Rp.500.000,00</p>
+                    <h2>Skinnyfit Suit</h2>
+                    <p>Rp.650.000,00</p>
                 </div>
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/4_bot_b.jpg" alt="models">
-                        <img class="top-img" src="assets/4_bot.jpg" alt="bottoms">
+                        <img src="/assets/blackHoodie.jpg" alt="models">
+                        <img class="top-img" src="/assets/blackHoodieP.jpg" alt="tops">
                     </div>
-                    <h2>Cotton Twill Trousers</h2>
-                    <p>Rp.450.000,00</p>
+                    <h2>Hoodie Blacknimation</h2>
+                    <p>Rp.350.000,00</p>
                 </div>
             </div>
             <div class="rowCard">
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/5_bot_b.jpg" alt="models">
-                        <img class="top-img" src="assets/5_bot.jpg" alt="bottoms">
+                        <img src="/assets/top_1_b.jpg" alt="models">
+                        <img class="top-img" src="/assets/top_1.jpg" alt="tops">
                     </div>
-                    <h2>Regular Fit Sweatshorts</h2>
-                    <p>Rp.200.000,00</p>
+                    <h2>Green Checked</h2>
+                    <p>Rp.250.000,00</p>
                 </div>
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/6_bot_b.jpg" alt="models">
-                        <img class="top-img" src="assets/6_bot.jpg" alt="bottoms">
+                        <img src="/assets/top_2_b.jpg" alt="models">
+                        <img class="top-img" src="/assets/top_2.jpg" alt="tops">
                     </div>
-                    <h2>Regular Tapered Jeans</h2>
+                    <h2>Black Skinny Jacket</h2>
                     <p>Rp.400.000,00</p>
                 </div>
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/7_bot_b.jpg" alt="models">
-                        <img class="top-img" src="assets/7_bot.jpg" alt="bottoms">
+                        <img src="/assets/top_3_b.jpg" alt="models">
+                        <img class="top-img" src="/assets/top_3.jpg" alt="tops">
                     </div>
-                    <h2>Regular Fit Shorts</h2>
-                    <p>Rp.350.000,00</p>
+                    <h2>Checked Grassgreen</h2>
+                    <p>Rp.250.000,00</p>
                 </div>
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/8_bot_b.jpg" alt="models">
-                        <img class="top-img" src="assets/8_bot.jpg" alt="bottoms">
+                        <img src="/assets/top_4_b.jpg" alt="models">
+                        <img class="top-img" src="/assets/top_4.jpg" alt="tops">
                     </div>
-                    <h2>Sweatshorts</h2>
-                    <p>Rp.200.000,00</p>
+                    <h2>Patterned Blacklash</h2>
+                    <p>Rp.360.000,00</p>
                 </div>
             </div>
             <div class="rowCard">
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/bot_1_b.jpg" alt="models">
-                        <img class="top-img" src="assets/bot_1.jpg" alt="bottoms">
+                        <img src="/assets/top_5_b.jpg" alt="models">
+                        <img class="top-img" src="/assets/top_5.jpg" alt="tops">
                     </div>
-                    <h2>Regular Fit Joggers</h2>
+                    <h2>Denim Jacket</h2>
                     <p>Rp.300.000,00</p>
                 </div>
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/7_bot_b.jpg" alt="models">
-                        <img class="top-img" src="assets/7_bot.jpg" alt="bottoms">
+                        <img src="/assets/top_6_b.jpg" alt="models">
+                        <img class="top-img" src="/assets/top_6.jpg" alt="tops">
                     </div>
-                    <h2>Regular Fit Shorts</h2>
+                    <h2>Relax Hawaiian</h2>
+                    <p>Rp.250.000,00</p>
+                </div>
+                <div class="colCard">
+                    <div class="imgCard">
+                        <img src="/assets/top_7b.jpg" alt="models">
+                        <img class="top-img" src="/assets/top_7.jpg" alt="tops">
+                    </div>
+                    <h2>Patterned Relax Greenjob</h2>
                     <p>Rp.350.000,00</p>
                 </div>
                 <div class="colCard">
                     <div class="imgCard">
-                        <img src="assets/4_bot_b.jpg" alt="models">
-                        <img class="top-img" src="assets/4_bot.jpg" alt="bottoms">
+                        <img src="/assets/top_8_b.jpg" alt="models">
+                        <img class="top-img" src="/assets/top_8.jpg" alt="tops">
                     </div>
-                    <h2>Cotton Twill Trousers</h2>
-                    <p>Rp.450.000,00</p>
-                </div>
-                <div class="colCard">
-                    <div class="imgCard">
-                        <img src="assets/3_bot_b.jpg" alt="models">
-                        <img class="top-img" src="assets/3_bot.jpg" alt="bottoms">
-                    </div>
-                    <h2>Regular Fit Suit Trousers</h2>
-                    <p>Rp.500.000,00</p>
+                    <h2>Patterned Spongebob</h2>
+                    <p>Rp.350.000,00</p>
                 </div>
             </div>
         </div>
@@ -156,9 +156,9 @@
                 <div class="follow">
                     <h4>Follow Us</h4>
                     <div class="icon">
-                        <a href="https://www.instagram.com/" target="_blank"><img src="assets/instagram.png" alt="instagram"></a>
-                        <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt="faceboook"></a>
-                        <a href="https://twitter.com/?lang=en" target="_blank"><img src="assets/twitter.png" alt="twitter"></a>
+                        <a href="https://www.instagram.com/" target="_blank"><img src="/assets/instagram.png" alt="instagram"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img src="/assets/facebook.png" alt="faceboook"></a>
+                        <a href="https://twitter.com/?lang=en" target="_blank"><img src="/assets/twitter.png" alt="twitter"></a>
                     </div>
                 </div>
             </div>
@@ -189,5 +189,5 @@
         </div>
     </footer>
 </body>
-<script src="nav.js"></script>
+<script src="/js/nav.js"></script>
 </html>
