--- a/html/locationsPage.html
+++ b/html/locationsPage.html
@@ -13,14 +13,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3515e30614.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="locationPage.css">
+    <link rel="stylesheet" href="/css/locationPage.css">
     <title>Locations | M&T</title>
     <link rel="shortcut icon" href="assets/MTLogo.png">
 
 </head>
 <body>
     <section class="header">
-        <a href="homePage.html"><img src="assets/mtLogo.png" class="logo" alt=""></a>
+        <a href="homePage.html"><img src="/assets/mtLogo.png" class="logo" alt=""></a>
         <div>
             <ul class="nav" id="nav_bar">
                 <li><a href="homePage.html">Home</a></li>
@@ -48,12 +48,12 @@
                         <h4>M.H. Thamrin St</h4>
                     </div>
                     <div class="imgLoc">
-                        <img src="assets/loc4.jpg" alt="Jakarta">
+                        <img src="/assets/loc4.jpg" alt="Jakarta">
                     </div>
                 </div>
                 <div class="rowLoc">
                     <div class="imgLoc">
-                        <img src="assets/loc5.jpg" alt="Bandung">
+                        <img src="/assets/loc5.jpg" alt="Bandung">
                     </div>
                     <div class="descLoc">
                         <h2>M&T Trans Studio Mall</h2>
@@ -68,12 +68,12 @@
                         <h4>Minami 1 Jo Ave</h4>
                     </div>
                     <div class="imgLoc">
-                        <img src="assets/loc6.jpg" alt="Hokkaido">
+                        <img src="/assets/loc6.jpg" alt="Hokkaido">
                     </div>
                 </div>
                 <div class="rowLoc">
                     <div class="imgLoc">
-                        <img src="assets/loc1.jpg" alt="Michigan">
+                        <img src="/assets/loc1.jpg" alt="Michigan">
                     </div>
                     <div class="descLoc">
                         <h2>M&T Southland Center</h2>
@@ -88,12 +88,12 @@
                         <h4>350 Bourke St</h4>
                     </div>
                     <div class="imgLoc">
-                        <img src="assets/loc2.jpg" alt="Melbourne">
+                        <img src="/assets/loc2.jpg" alt="Melbourne">
                     </div>
                 </div>
                 <div class="rowLoc">
                     <div class="imgLoc">
-                        <img src="assets/loc3.jpg" alt="Windsor">
+                        <img src="/assets/loc3.jpg" alt="Windsor">
                     </div>
                     <div class="descLoc">
                         <h2>M&T Windsor & Eton Central</h2>
@@ -115,9 +115,9 @@
                 <div class="follow">
                     <h4>Follow Us</h4>
                     <div class="icon">
-                        <a href="https://www.instagram.com/" target="_blank"><img src="assets/instagram.png" alt="instagram"></a>
-                        <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt="faceboook"></a>
-                        <a href="https://twitter.com/?lang=en" target="_blank"><img src="assets/twitter.png" alt="twitter"></a>
+                        <a href="https://www.instagram.com/" target="_blank"><img src="/assets/instagram.png" alt="instagram"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img src="/assets/facebook.png" alt="faceboook"></a>
+                        <a href="https://twitter.com/?lang=en" target="_blank"><img src="/assets/twitter.png" alt="twitter"></a>
                     </div>
                 </div>
             </div>
@@ -148,5 +148,5 @@
         </div>
     </footer>
 </body>
-<script src="nav.js"></script>
+<script src="/js/nav.js"></script>
 </html>
