--- a/html/subscribePage.html
+++ b/html/subscribePage.html
@@ -15,14 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3515e30614.js" crossorigin="anonymous"></script>
     
-    <link rel="stylesheet" href="subscribePage.css">
+    <link rel="stylesheet" href="/css/subscribePage.css">
     <title>Subscribe | M&T</title>
-    <link rel="shortcut icon" href="assets/MTLogo.png">
+    <link rel="shortcut icon" href="/assets/MTLogo.png">
 
 </head>
 <body>
     <section class="header">
-        <a href="homePage.html"><img src="assets/mtLogo.png" class="logo" alt=""></a>
+        <a href="homePage.html"><img src="/assets/mtLogo.png" class="logo" alt=""></a>
         <div>
             <ul class="nav" id="nav_bar">
                 <li><a href="homePage.html">Home</a></li>
@@ -139,9 +139,9 @@
                 <div class="follow">
                     <h4>Follow Us</h4>
                     <div class="icon">
-                        <a href="https://www.instagram.com/" target="_blank"><img src="assets/instagram.png" alt="instagram"></a>
-                        <a href="https://www.facebook.com/" target="_blank"><img src="assets/facebook.png" alt="faceboook"></a>
-                        <a href="https://twitter.com/?lang=en" target="_blank"><img src="assets/twitter.png" alt="twitter"></a>
+                        <a href="https://www.instagram.com/" target="_blank"><img src="/assets/instagram.png" alt="instagram"></a>
+                        <a href="https://www.facebook.com/" target="_blank"><img src="/assets/facebook.png" alt="faceboook"></a>
+                        <a href="https://twitter.com/?lang=en" target="_blank"><img src="/assets/twitter.png" alt="twitter"></a>
                     </div>
                 </div>
             </div>
@@ -172,6 +172,6 @@
         </div>
     </footer>
 </body>
-<script src="subsPage.js"></script>
-<script src="nav.js"></script>
+<script src="/js/subsPage.js"></script>
+<script src="/js/nav.js"></script>
 </html>
