--- a/html/subscribePage.html
+++ b/html/subscribePage.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/3515e30614.js" crossorigin="anonymous"></script>
     
     <link rel="stylesheet" href="/css/subscribePage.css">
-    <title>Subscribe | M&T</title>
+    <title>Subscribe Us | M&T</title>
     <link rel="shortcut icon" href="/assets/MTLogo.png">
 
 </head>
